fixed misalignment in feed container

--- a/feed.css
+++ b/feed.css
@@ -1,7 +1,7 @@
 .container {
-    height: calc(100vh - 150px);
+    height: calc(100vh - 160px);
     position: relative;
-    transform: translateY(150px);
+    transform: translateY(160px);
     display: flex;
     justify-content: center;
     align-content: center;
@@ -18,6 +18,8 @@
     flex-wrap: wrap;
     justify-content: center;
     align-content: flex-start;
+    position: relative;
+    top: -5px;
 }
 
 .thumbnail {
